--- a/styles.css
+++ b/styles.css
@@ -400,3 +400,50 @@ undefined .background li:nth-child(0) {
   top: 33vh;
   border-color: #ffffff;
 }
+
+.dialog {
+  position: fixed;
+  top: 0;
+
+  left: 0;
+  z-index: 100;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  height: 100vh;
+}
+
+.visible {
+  display: initial !important;
+}
+
+.dialog-content {
+  position: fixed;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70vw;
+  padding: 15px 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+  background-color: white;
+  max-width: 300px;
+}
+
+h2 {
+  margin-bottom: 10px;
+  margin-top: 0px;
+}
+
+p {
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 16px;
+  color: rgb(121, 121, 121);
+}
+
+.close {
+  margin-top: 30px;
+  width: 100%;
+}
